<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_meeting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.tutosaurus.activity.CreateMeetingActivity">

    <LinearLayout
        android:id="@+id/addMeetingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/date_location_meeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/pickDateTime"
                    android:text="@string/create_meeting_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="showDateTimePickerDialog"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dateView"
                        android:visibility="gone"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/timeView"
                        android:visibility="gone"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/pickLocation"
                    android:text="@string/create_meeting_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="showLocationPickerDialog"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/placeName"
                    android:visibility="gone"/>

            </LinearLayout>


        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/courseListView"
            android:visibility="visible">
        </ListView>


        <EditText
            android:id="@+id/description"
            android:hint="@string/create_meeting_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/addMeeting"
            android:text="@string/create_meeting_request"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</RelativeLayout>
