<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_logOutButton"
        android:orderInCategory="100"
        android:title="@string/action_logOut"
        android:visible="true"
        app:showAsAction="ifRoom"
        android:enabled="true" />
</menu>
