...
        android:text="@string/send_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmNewPass"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:id="@+id/changeNewPass"
        android:background="@android:drawable/editbox_background"
        android:textSize="18sp"
        android:textStyle="normal|bold|italic"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorAccent"
        android:onClick="changePassword" />
...
