<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/chat_message_list"
        android:layout_weight="1"
        android:divider="@null"
        android:dividerHeight="3dp"
        android:padding="5dp"
        android:transcriptMode="alwaysScroll"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/chat_message_input"
            android:layout_weight="1"
            android:hint="@string/enter_message_prompt" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/chat_message_send"
            app:srcCompat="@drawable/ic_menu_send"
            style="?android:attr/borderlessButtonStyle"
            android:contentDescription="@string/send_message_btn"/>

    </LinearLayout>

</LinearLayout>