<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_switch_adapter"
        android:title="@string/switch_adapter"
        android:icon="@android:drawable/ic_menu_revert"
        android:visible="true"
        app:showAsAction="ifRoom" />
</menu>